--- a/fastled_esp01m.yaml
+++ b/fastled_esp01m.yaml
@@ -42,35 +42,34 @@ light:
           name: "Demo"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_demo(it, initial_run);
+            Nezumikun::FastLedStrip::demo(it, initial_run);
       - addressable_lambda:
           name: "Rainbow"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_rainbow(it, initial_run);
+            Nezumikun::FastLedStrip::rainbow(it, initial_run);
       - addressable_lambda:
           name: "Confetti"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_confetti(it, initial_run);
+            Nezumikun::FastLedStrip::confetti(it, initial_run);
       - addressable_lambda:
           name: "Sinelon"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_sinelon(it, initial_run);
+            Nezumikun::FastLedStrip::sinelon(it, initial_run);
       - addressable_lambda:
           name: "Juggle"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_juggle(it, initial_run);
+            Nezumikun::FastLedStrip::juggle(it, initial_run);
       - addressable_lambda:
           name: "Beats"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_beats(it, initial_run);
+            Nezumikun::FastLedStrip::beats(it, initial_run);
       - addressable_lambda:
           name: "Noise"
           update_interval: 10ms
           lambda: |-
-            Nezumikun::FastLedStrip::fastled_noise(it, initial_run);
-      
+            Nezumikun::FastLedStrip::noise(it, initial_run);
