--- a/fastled.yaml
+++ b/fastled.yaml
@@ -2,6 +2,7 @@ substitutions:
   devicename: fastled
   platform: ESP8266
   board: nodemcuv2
+  devicedescr: FastLED Strip
 
 esphome:
   name: ${devicename}
@@ -22,12 +23,14 @@ esp8266:
 packages:
   base_settings: !include common/base_settings.yaml
   wifi: !include common/network.yaml
+  uptime: !include common/uptime.yaml
+  wifi_info: !include common/wifi_info.yaml
 
 light:
   - platform: fastled_clockless
     chipset: WS2812B
     pin: GPIO4
-    num_leds: 100
+    num_leds: 300
     rgb_order: GRB
     name: "FastLED WS2812B Light"
     id: fastled_strip
