--- a/esp32_ble.yaml
+++ b/esp32_ble.yaml
@@ -8,10 +8,10 @@ substitutions:
   devicedescr: ESP32 01
   
 packages:
-  wifi: !include common/network.yaml
-#  base_settings: !include common/base_settings.yaml
-  uptime: !include common/uptime.yaml
-  wifi_info: !include common/wifi_info.yaml
+  wifi: !include packages/network.yaml
+#  base_settings: !include packages/base_settings.yaml
+  uptime: !include packages/uptime.yaml
+  wifi_info: !include packages/wifi_info.yaml
 
 esp32_ble_tracker:
   on_ble_advertise:
