--- a/esp_sensor01_bme280.yaml
+++ b/esp_sensor01_bme280.yaml
@@ -56,8 +56,8 @@ sensor:
     update_interval: 60s
 
 packages:
-  wifi: !include common/network.yaml
-  base_settings: !include common/base_settings.yaml
-  uptime: !include common/uptime.yaml
-  wifi_info: !include common/wifi_info.yaml
-  clock: !include common/clock.yaml
+  wifi: !include packages/network.yaml
+  base_settings: !include packages/base_settings.yaml
+  uptime: !include packages/uptime.yaml
+  wifi_info: !include packages/wifi_info.yaml
+  clock: !include packages/clock.yaml
