--- a/fastled_esp01m.yaml
+++ b/fastled_esp01m.yaml
@@ -17,9 +17,9 @@ esp8266:
     version: 2.7.4
 
 packages:
-  base_settings: !include common/base_settings.yaml
-  wifi: !include common/network.yaml
-  uptime: !include common/uptime.yaml
-  wifi_info: !include common/wifi_info.yaml
-  fastled_strip: !include common/fastled_strip.yaml
-  alive_led: !include common/alive_led.yaml
+  base_settings: !include packages/base_settings.yaml
+  wifi: !include packages/network.yaml
+  uptime: !include packages/uptime.yaml
+  wifi_info: !include packages/wifi_info.yaml
+  fastled_strip: !include packages/fastled_strip.yaml
+  alive_led: !include packages/alive_led.yaml
