--- a/sonoff_common.yaml
+++ b/sonoff_common.yaml
@@ -8,10 +8,10 @@ esphome:
       - switch.turn_on: green_blink
 
 packages:
-  wifi: !include common/network.yaml
-  base_settings: !include common/base_settings.yaml
-  uptime: !include common/uptime.yaml
-  wifi_info: !include common/wifi_info.yaml
+  wifi: !include packages/network.yaml
+  base_settings: !include packages/base_settings.yaml
+  uptime: !include packages/uptime.yaml
+  wifi_info: !include packages/wifi_info.yaml
 
 binary_sensor:
   - platform: gpio
