--- a/window_led.yaml
+++ b/window_led.yaml
@@ -18,9 +18,9 @@ web_server:
   port: 80
 
 packages:
-  wifi: !include common/network.yaml
-  uptime: !include common/uptime.yaml
-  wifi_info: !include common/wifi_info.yaml
+  wifi: !include packages/network.yaml
+  uptime: !include packages/uptime.yaml
+  wifi_info: !include packages/wifi_info.yaml
 
 switch:
   - platform: gpio
