Замена пароля на ключ шифрования

--- a/esp_sensor01_bme280.yaml
+++ b/esp_sensor01_bme280.yaml
@@ -61,3 +61,7 @@ packages:
   uptime: !include packages/uptime.yaml
   wifi_info: !include packages/wifi_info.yaml
   clock: !include packages/clock.yaml
+
+logger:
+  logs:
+    switch: INFO
