Работа над ошибками

--- a/fastled_esp01m.yaml
+++ b/fastled_esp01m.yaml
@@ -1,7 +1,6 @@
 substitutions:
   devicename: fastled
   platform: ESP8266
-#  board: nodemcuv2
   board: esp01_1m
   devicedescr: FastLED Strip
   strip_num_leds: '300'
@@ -11,11 +10,14 @@ substitutions:
 
 esphome:
   name: ${devicename}
+  
+esp8266:
+  board: ${board}
 
 packages:
   base_settings: !include packages/base_settings.yaml
   wifi: !include packages/network.yaml
   uptime: !include packages/uptime.yaml
   wifi_info: !include packages/wifi_info.yaml
-  fastled_strip: !include packages/fastled_strip.yaml
+  fastled_strip: !include packages/neopixel_strip.yaml
   alive_led: !include packages/alive_led.yaml
